--- a/component/login/login.scss
+++ b/component/login/login.scss
@@ -1,11 +1,3 @@
 .login{
-    margin-top:50px;
-    display:flex;
-    align-items:center;
-    .espace{
-        
-    }
-    .text{
-        font-size:xx-large;
-    }
+    color: rgb(255, 0, 0);
 }
