premier test BDD avec classe

--- a/component/entete/entete.html
+++ b/component/entete/entete.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./../../component/entete/entete.scss">
+<link rel="stylesheet" href="./../../component/entete/entete.css">
 <div class="all">
     <div class="petite-espace"></div>
     <img class="logo" src="./../../assets/img/logo.jpg" alt="logo"/>
