--- a/component/sing/sing.html
+++ b/component/sing/sing.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./../../component/sing/sing.scss">
+<link rel="stylesheet" href="./../../component/sing/sing.css">
 <div class="sing">
     <div class="sing-espace"></div>
     <a class="singin" href="./../../page/singin/singin.php"> Sing IN</a>
