--- a/component/entete/entete.html
+++ b/component/entete/entete.html
@@ -2,6 +2,6 @@
 <div class="all">
     <div class="petite-espace"></div>
     <img class="logo" src="./../../assets/img/logo.jpg" alt="logo"/>
-    <div class="espace"></div>
+    <div class="espacetete"></div>
     <p class="titre">Joov'Teck</p>
 </div>
