--- a/component/sing/sing.html
+++ b/component/sing/sing.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="./../../component/sing/sing.css">
 <div class="sing">
     <div class="sing-espace"></div>
-    <a class="singin" href="./../../page/singin/singin.php"> Sing IN</a>
-    <a class="singup" href="./../../page/singup/singup.php">Sing UP</a>
+    <a class="singin" href="./../../page/singin/singin.php"> Sign IN</a>
+    <a class="singup" href="./../../page/singup/singup.php">Sign UP</a>
 </div>
