--- a/component/entete/entete.css
+++ b/component/entete/entete.css
@@ -1,16 +1,27 @@
 body{
     margin: 0%;
+    background-color:black;
+    background-image:url('./../../assets/img/fond.jpg');
+    background-size:cover;
+    background-repeat:no-repeat;
+    color:rgba(238, 240, 238, 0.823);
 }
 .all{
+  margin-top:-12px;
+  padding-top: 10px;
+  padding-bottom:10px;
     display: flex;
-    background-color: #1f17fe;
+    position:fixed;
+    background-color: #000000;
     height: max-content;
+    border-bottom:1px solid white;
+    width:100vw;
+}
+.espacetete{
+  flex:0.9;
 }
 .petite-espace{
-    flex:0.05;
-}
-.espace{
-    flex: 0.9;
+    width:3vw;
 }
 .logo{
     height: 70px;
@@ -18,6 +29,11 @@ body{
 }
 .titre{
     font-weight: bold;
-    color: black;
-    font-size: x-large;
+    color: #05ff3a;
+    font-size: 25px;
+}
+
+a{
+    color:#6868fd;
+    text-decoration:none;
 }
