--- a/component/navigation/navigation.css
+++ b/component/navigation/navigation.css
@@ -8,7 +8,7 @@
 .menu{
     position: fixed;
     display: flex;
-    height : 9vh;
+    height : 90px;
     margin-top: -45px;
     width: 100vw;
     background-color: rgba(29, 29, 29);
@@ -24,7 +24,7 @@
     background-color:rgb(79, 80, 79);
     padding:5px 10px;
     font-weight: 500;
-    margin-left: -10px;
+    margin-left: -4.5vw;
 }
 #btnControl {
     display: none;
@@ -80,5 +80,12 @@ li:hover{
     width:35vw;
 }
 .margtop{
-    padding-bottom:150px;
+    padding-bottom:170px;
+}
+.photoDeProfilPseudo{
+    margin-top: 15px;
+    width: 70px;
+    height: 70px;
+    margin-left: 70vw;
+    border-radius: 50px;
 }
