--- a/page/message/message.css
+++ b/page/message/message.css
@@ -1,5 +1,6 @@
 .nouveau{
-    color: red;
+    color: black;
+    font-weight:bold;
 }
 .nouveaumessage{
     width: 50%;
@@ -12,7 +13,7 @@
     border-radius:2vw;
     margin-left:40vw;
     color:black;
-    background-color:#00ffdd8c;
+    background-color:#2a561b8c;
     width:50vw;
 }
 .lui{
@@ -20,5 +21,5 @@
     border-radius:2vw;
     color:black;
     width:60vw;
-    background-color:#faff008c;
+    background-color:#0000007d;
 }
