--- a/page/singup/singup.css
+++ b/page/singup/singup.css
@@ -8,6 +8,7 @@ p{
     text-align:center;
 }
 input{
+    color: white;
         margin:10px;
         text-align:center;
         border-radius:5px;
@@ -17,7 +18,7 @@ input{
         background-color:#00000017;
 }
 input::placeholder{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 select{
     border-radius:5px;
@@ -38,6 +39,9 @@ label{
     background-color: brown;
     margin:10%;
 }
-.rouge{
-    color: rgb(255, 6, 6);
+.blok{
+    display: flex;
+}
+.space{
+    flex:0.2;
 }
