--- a/component/navigation/navigation.css
+++ b/component/navigation/navigation.css
@@ -1,91 +1,127 @@
-.navigation{
-    position:fixed;
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+
+  .b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+
+  .b-example-vr {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+  }
+
+  .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+  }
+
+  .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+  }
+
+  .nav-scroller .nav {
     display: flex;
-    background-color:yellow;
-    margin-top:120px;
-}
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
 
-.menu{
-    position: fixed;
-    display: flex;
-    height : 90px;
-    margin-top: -45px;
-    width: 100vw;
-    background-color: rgba(29, 29, 29);
-    z-index:-1;
-}
-.alien, .alien:active{
-    color:rgb(195, 0, 255);
-}
-.espace{
-    flex: 0.5;
-}
-.connecte{
-    background-color:rgb(79, 80, 79);
-    padding:5px 10px;
+@media (max-width: 991.98px) {
+    .offcanvas-collapse {
+      position: fixed;
+      top: 56px; /* Height of navbar */
+      bottom: 0;
+      left: 100%;
+      width: 100%;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      overflow-y: auto;
+      visibility: hidden;
+      background-color: #343a40;
+      transition: transform .3s ease-in-out, visibility .3s ease-in-out;
+    }
+    .offcanvas-collapse.open {
+      visibility: visible;
+      transform: translateX(-100%);
+    }
+  }
+  
+  .nav-scroller .nav {
+    color: rgba(255, 255, 255, .75);
+  }
+  
+  .nav-scroller .nav-link {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: .875rem;
+    color: #6c757d;
+  }
+  
+  .nav-scroller .nav-link:hover {
+    color: #007bff;
+  }
+  
+  .nav-scroller .active {
     font-weight: 500;
-    margin-left: -4.5vw;
-}
-#btnControl {
-    display: none;
-}
-
-#btnControl:checked + label > ul {
-    visibility: visible;
-}
-ul{
-    visibility: hidden;
-    margin-top: 20px;
-    border-radius: 0px 0px 10px 10px;
-    background-color: rgba(242, 239, 239, 0.893);
-    width: max-content;    
-}
-
-ul li{
-    list-style-type: none;
-    width: max-content;
-    font-size: 80%;
-    font-weight: 500;
-    padding: 10px 0px 5px 10px;
-    margin-left: -32px;
-}
-.deconnecte{
-    border-top: solid black 1px;
-    border-radius: 0px 0px 1px 10px;
-}
-li:hover{
-    color: white;
-    background-color: rgb(25 46 91);
-}
-.btn{
-    margin: 2vh 0px 0px auto;
-    height: auto;
-    border: none;
-    font-size: 130%;
-}
-.loupe{
-    width:30px;
-    margin-left:1vw;
-}
-.search{
-    position:fixed;
-    z-index:1;
-    align-items:center;
-    display:flex;
-    margin-top:88px;
-    width:40;
-}
-.recherche{
-    margin:auto 1vw;
-    width:35vw;
-}
-.margtop{
-    padding-bottom:170px;
-}
+    color: #343a40;
+  }
+  
+  .bg-purple {
+    background-color: #6f42c1;
+  }
+.form-control-dark {
+    border-color: var(--bs-gray);
+  }
+  .form-control-dark:focus {
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+  }
+  
+  .text-small {
+    font-size: 85%;
+  }
+  
+  .dropdown-toggle {
+    outline: 0;
+  }
+  
 .photoDeProfilPseudo{
-    margin-top: 15px;
-    width: 70px;
-    height: 70px;
-    margin-left: 70vw;
-    border-radius: 50px;
+    width: 60px;
+    height: 60px;
+}  
+.dropdown{
+    width: 200px;
+}
+.container-fluid{
+    z-index: 1;
+}
+.form-inline{
+    display: flex;
+}
+nav{
+    position: absolute;
+    border-bottom: 2px solid black;
 }
