creation de la page notification et integration du design integration du design de la page menu

--- a/component/navigation/navigation.css
+++ b/component/navigation/navigation.css
@@ -125,3 +125,8 @@ nav{
     position: absolute;
     border-bottom: 2px solid black;
 }
+
+.badge{
+  background-color: red;
+  margin-left: 5px;
+}
