--- a/page/menu/menu.css
+++ b/page/menu/menu.css
@@ -1,11 +1,19 @@
-.profil{
-    padding-top:10px;
-    padding-bottom:10px;
-    border: 1px green solid;
-    color:black;
-    text-decoration:none;
-    display:flex;
+.menu{
+    margin:100px auto auto;
+    width: 50vw;
 }
-.marge{
-    flex:0.5;
+.menu a{
+    text-decoration: none;
+    color: black;
+}
+@media (max-width: 1200px) {
+    .menu{
+        width: 100vw;
+    }
+}
+img{
+    width: 30px;
+}
+.logout{
+    background-color: rgba(206, 206, 206, 0.349);
 }
