integration du design du premier interface de message

--- a/component/navigation/navigation.css
+++ b/component/navigation/navigation.css
@@ -130,3 +130,10 @@ nav{
   background-color: red;
   margin-left: 5px;
 }
+.btn-lien{
+  border: none;
+  background-color:rgba(255, 255, 255, 0);
+}
+.cacher{
+  display: none;
+}
