--- a/page/profil/profil.css
+++ b/page/profil/profil.css
@@ -1,31 +1,44 @@
-.tete{
-    width: 100vw;
+.profile{
+    margin: 80px 2vw;
 }
-.photoDeCouverture{
-    width: 100vw;
-    height: 40vh;
+.card{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .card-header{
+    display: flex;
+  }
+  .card-title{
+    text-align: center;
+  }
+  .tab-content{
+    margin-top:0px;
+  }
+  .react{
+    width: 30px;
+    padding: 0px;
+  }
+  small{
+    color: rgb(22, 22, 22);
+  }
+   .commentaire{
+    color: black;
+    padding-right: 5%;
+  }
+  .card-img-top{
+    height: 300px;
+    width: auto;
+    margin: auto;
+  }
+.publicationCard{
+    background-color: rgba(184, 184, 184, 0.438);
 }
-.modifierCouverture{
-    color: rgb(255, 255, 255);
-    position:absolute;
-    right: 0;
-    top:56vh;
-}
-.photoDeProfil{
-    width: 200px;
-    height: 200px;
-    border-radius: 40vw;
-    border: bisque solid 2px;
-    position:absolute;
-    left: 41vw;
-    top:30vh;
-}
-.modifierProfil{
-    color: rgb(255, 255, 255);
-    position:absolute;
-    left: 49vw;
-    top:54vh;
-}
-.nom{
-    color: rgb(41, 41, 41);
-}
+  .photoDeCouverture{
+      width: 100%;
+  }
+  .blocContenue{
+      padding-left: 2%;
+      height: 65vh;
+      overflow: auto;
+  }
